--- a/index.html
+++ b/index.html
@@ -1998,15 +1998,15 @@
          </div>
          <!-- .main-container -->
       </div>
-      <script type="text/javascript">
+      <!-- <script type="text/javascript">
          (function () {
          	var c = document.body.className;
          	c = c.replace(/woocommerce-no-js/, 'woocommerce-js');
          	document.body.className = c;
          })();
-      </script>
-      <link rel="stylesheet" id="rock-form-builder-style-css" href="./assets/style/rock-form-builder-style.css" type="text/css" media="all">
-      <style id="rock-form-builder-style-inline-css" type="text/css">
+      </script> -->
+      <!-- <link rel="stylesheet" id="rock-form-builder-style-css" href="./assets/style/rock-form-builder-style.css" type="text/css" media="all"> -->
+      <!-- <style id="rock-form-builder-style-inline-css" type="text/css">
          .rockthemes-form-builder input, 
          .rockthemes-form-builder input:not([type="submit"]), 
          .rockthemes-form-builder select, 
@@ -2118,31 +2118,31 @@
          .rockthemes-form-builder textarea:focus:-ms-input-placeholder { 
          color:#c5cdd1;
          }
-      </style>
-      <script type="text/javascript" src="./assets/script/comment-reply.min.js.download" id="comment-reply-js"></script>
-      <script type="text/javascript" src="./assets/script/jquery.color.min.js.download" id="jquery-color-js"></script>
+      </style> -->
+      <!-- <script type="text/javascript" src="./assets/script/comment-reply.min.js.download" id="comment-reply-js"></script> -->
+      <!-- <script type="text/javascript" src="./assets/script/jquery.color.min.js.download" id="jquery-color-js"></script> -->
       <script type="text/javascript" src="./assets/script/effect.min.js.download" id="jquery-effects-core-js"></script>
-      <script type="text/javascript" src="./assets/script/underscore.min.js.download" id="underscore-js"></script>
-      <script type="text/javascript" src="./assets/script/jquery.blockUI.min.js.download" id="jquery-blockui-js"></script>
-      <script type="text/javascript" id="wc-add-to-cart-js-extra">
-         /* <![CDATA[ */
-         var wc_add_to_cart_params = {"ajax_url":"\/abberry\/wp-admin\/admin-ajax.php","wc_ajax_url":"\/abberry\/?wc-ajax=%%endpoint%%","i18n_view_cart":"View cart","cart_url":"http:\/\/azoom-sites.rockthemes.net\/abberry\/cart\/","is_cart":"","cart_redirect_after_add":"no"};
-         /* ]]> */
-      </script>
+      <!-- <script type="text/javascript" src="./assets/script/underscore.min.js.download" id="underscore-js"></script> -->
+      <!-- <script type="text/javascript" src="./assets/script/jquery.blockUI.min.js.download" id="jquery-blockui-js"></script> -->
+         <script type="text/javascript" id="wc-add-to-cart-js-extra">
+            /* <![CDATA[ */
+            var wc_add_to_cart_params = {"ajax_url":"\/abberry\/wp-admin\/admin-ajax.php","wc_ajax_url":"\/abberry\/?wc-ajax=%%endpoint%%","i18n_view_cart":"View cart","cart_url":"http:\/\/azoom-sites.rockthemes.net\/abberry\/cart\/","is_cart":"","cart_redirect_after_add":"no"};
+            /* ]]> */
+         </script>
       <script type="text/javascript" src="./assets/script/add-to-cart.min.js.download" id="wc-add-to-cart-js"></script>
-      <script type="text/javascript" src="./assets/script/js.cookie.min.js.download" id="js-cookie-js"></script>
-      <script type="text/javascript" id="woocommerce-js-extra">
+      <!-- <script type="text/javascript" src="./assets/script/js.cookie.min.js.download" id="js-cookie-js"></script> -->
+      <!-- <script type="text/javascript" id="woocommerce-js-extra">
          /* <![CDATA[ */
          var woocommerce_params = {"ajax_url":"\/abberry\/wp-admin\/admin-ajax.php","wc_ajax_url":"\/abberry\/?wc-ajax=%%endpoint%%"};
          /* ]]> */
-      </script>
-      <script type="text/javascript" src="./assets/script/woocommerce.min.js.download" id="woocommerce-js"></script>
-      <script type="text/javascript" id="wc-cart-fragments-js-extra">
+      </script> -->
+      <!-- <script type="text/javascript" src="./assets/script/woocommerce.min.js.download" id="woocommerce-js"></script> -->
+      <!-- <script type="text/javascript" id="wc-cart-fragments-js-extra">
          var wc_cart_fragments_params = {"ajax_url":"\/abberry\/wp-admin\/admin-ajax.php","wc_ajax_url":"\/abberry\/?wc-ajax=%%endpoint%%","cart_hash_key":"wc_cart_hash_2abdd9e98a962bf689f8fe1016dd0378","fragment_name":"wc_fragments_2abdd9e98a962bf689f8fe1016dd0378","request_timeout":"5000"};
-      </script>
-      <script type="text/javascript" src="./assets/script/cart-fragments.min.js.download" id="wc-cart-fragments-js"></script>
-      <div id="ascrail2000" class="nicescroll-rails nicescroll-rails-vr" style="width: 14px; z-index: 999999; background: rgba(0, 0, 0, 0.3); cursor: default; position: fixed; top: 0px; height: 100%; right: 0px; display: block;">
+      </script> -->
+      <!-- <script type="text/javascript" src="./assets/script/cart-fragments.min.js.download" id="wc-cart-fragments-js"></script> -->
+      <!-- <div id="ascrail2000" class="nicescroll-rails nicescroll-rails-vr" style="width: 14px; z-index: 999999; background: rgba(0, 0, 0, 0.3); cursor: default; position: fixed; top: 0px; height: 100%; right: 0px; display: block;">
          <div class="nicescroll-cursors" style="position: relative; top: 0px; float: right; width: 14px; height: 84px; background-color: rgb(217, 21, 3); border: none; background-clip: padding-box; border-radius: 4px;"></div>
-      </div>
+      </div> -->
    </body>
 </html>
